# learn-scala2

./: .gitignore  Makefile  README.md  almond.sh  build.sbt  ex1.ipynb  pyproject.toml
blogs/: 2025-07-25-Scala-Collections.ipynb  2025-07-25-Scala-basics.ipynb  2025-10-24-Scala2Closures.ipynb  2025-10-26-Scala2-Functors.ipynb  2025-10-27-Scala-2-Collections.ipynb  2025-10-31-Functional-Programming-Abstractions-in-Scala.ipynb  2025-10027-Scala-2-Collections.ipynb  Makefile  build.sh  custom_markdown.tpl
cats/: Chapter-1.ipynb  Chapter-2.ipynb  Chapter-3.ipynb
cats/work/example-1/: build.sbt
cats/work/example-1/src/main/scala/io/github/ojitha/: Main.scala
essential/: Chapter-4.ipynb  Chapter-5.ipynb  Chapter-6.ipynb  experiment.sc
projects/spark-project/src/main/scala/io/github/ojitha/: Main.scala
